<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dimen30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen40dp"
            android:layout_marginBottom="@dimen/dimen20dp"
            android:id="@+id/etEmail"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="@dimen/dimen15dp"
            android:hint="@string/email"
            android:background="@drawable/round_card"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:textSize="@dimen/textsize15sp"
            android:paddingLeft="@dimen/dimen15dp"
            android:textColor="@color/grey"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen40dp"
            android:id="@+id/etPassword"
            android:drawablePadding="@dimen/dimen15dp"
            android:hint="@string/password"
            android:background="@drawable/round_card"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1"
            android:textSize="@dimen/textsize15sp"
            android:textColor="@color/grey"
            android:importantForAutofill="no"
            android:drawableLeft="@drawable/ic_password"
            android:paddingLeft="@dimen/dimen15dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen40dp"
            android:id="@+id/tvLogin"
            android:text="@string/login"
            android:textSize="@dimen/textsize16sp"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen40dp"
            android:layout_marginBottom="@dimen/dimen20dp"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textAllCaps="true" />

    </LinearLayout>

</RelativeLayout>