<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll_productlist"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:src="@drawable/shop"
                android:layout_width="@dimen/dimen70dp"
                android:layout_height="@dimen/dimen70dp"
                android:id="@+id/img_product_details"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_marginEnd="@dimen/dimen10dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize13sp"
                android:id="@+id/tv_rating_details"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/dimen10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginStart="@dimen/dimen10dp"
                android:orientation="horizontal"
                tools:ignore="RtlCompat">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tv_productname_details"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize16sp"
                    android:text="@string/product_name"/>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/round_card"
                    android:gravity="center"
                    android:textSize="@dimen/textsize13sp"
                    android:id="@+id/tv_product_tatus_details"
                    android:layout_marginEnd="@dimen/dimen10dp"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:text="@string/available"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_marginEnd="@dimen/dimen10dp"
                android:orientation="vertical"
                tools:ignore="RtlCompat">

                <TextView
                    android:id="@+id/tv_product_spec_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen2dp"
                    android:textSize="@dimen/textsize14sp"
                    android:text="@string/product_name"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen5dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize14sp"
                        android:text="@string/delievery_time"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/dimen10dp"
                        android:id="@+id/tv_expectedTime_details"
                        android:textSize="@dimen/textsize14sp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen5dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="@dimen/textsize14sp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/dimen10dp"
                        android:id="@+id/tv_price_details"
                        android:textSize="@dimen/textsize14sp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen5dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/sort"
                        android:textSize="@dimen/textsize14sp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen1dp"
        android:background="@color/grey"
        android:layout_margin="@dimen/dimen10dp"/>
</LinearLayout>
